--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
   "files": {
-    "ignore": ["node_modules/**/*", "dist/**/*", ".next/**/*", "src/routeTree.gen.ts", ".vercel/**/*", "out/**/*"]
+    "includes": ["src/**", "*.{js,ts,json}", "!src/routeTree.gen.ts"]
   },
   "vcs": {
     "enabled": true,
@@ -11,7 +11,12 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true
+      "style": {
+        "useNumberNamespace": "error",
+        "noUnusedTemplateLiteral": "warn",
+        "noUselessElse": "warn",
+        "useSelfClosingElements": "warn"
+      }
     }
   },
   "formatter": {
@@ -36,25 +41,5 @@
     "linter": {
       "enabled": true
     }
-  },
-  "overrides": [
-    {
-      "include": ["*.astro"],
-      "linter": {
-        "enabled": true,
-        "rules": {
-          "style": {
-            "useConst": "off",
-            "useImportType": "off"
-          },
-          "correctness": {
-            "noUnusedImports": "off"
-          }
-        }
-      },
-      "formatter": {
-        "enabled": true
-      }
-    }
-  ]
+  }
 }
