--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
   "files": {
-    "includes": ["src/**", "*.{js,ts,json}", "!src/routeTree.gen.ts"]
+    "includes": ["src/**", "*.{js,ts,json}", "!src/routeTree.gen.ts", "!src/**/*.{astro}"]
   },
   "vcs": {
     "enabled": true,
